Implemented javaFX